[gd_scene load_steps=5 format=3 uid="uid://lwtsi0uyaanl"]

[ext_resource type="Script" path="res://scenes/in_game_menu/in_game_menu.gd" id="1_ke684"]
[ext_resource type="PackedScene" uid="uid://da7j1effokd3f" path="res://scenes/user_interface_sounds/user_interface_sounds.tscn" id="2_1lvb4"]
[ext_resource type="Theme" uid="uid://dngtc48jim2jc" path="res://assets/themes/main_menu_theme.tres" id="2_cv2uv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m6vf6"]

[node name="InGameMenu" type="CanvasLayer"]
script = ExtResource("1_ke684")

[node name="UserInterfaceSounds" parent="." node_paths=PackedStringArray("base_node") instance=ExtResource("2_1lvb4")]
base_node = NodePath("..")

[node name="CenterContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_cv2uv")
theme_override_styles/panel = SubResource("StyleBoxEmpty_m6vf6")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Continue" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="Settings" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Exit" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="CenterContainer/MarginContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="CenterContainer/MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CenterContainer/MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
